# G4col_simlation

./: .gitignore  README.md
Al_random_ColimatorPrototype3_0.34_v3/: DetectorConstruction.cc  example.mac
Al_random_ColimatorPrototype3_0.34_v3/src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SteppingAction.cc
Al_random_olimatorPrototype3_0.34_v3/: CMakeLists.txt  exampleB1.cc  init_vis.mac  run.mac
Al_random_olimatorPrototype3_0.34_v3/include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  SteppingAction.hh
Al_random_olimatorPrototype3_0.34_v3/src/: DetectorConstruction.cc  MyTrackingAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc
Cu_random_olimatorPrototype3_0.34_v3/analysis/: hitsselect_corect_region_counts2.txt
Cu_random_olimatorPrototype3_0.34_v3/include/: MyTrackingAction.hh  PrimaryGeneratorAction.hh
Cu_random_olimatorPrototype3_0.34_v3/src/: DetectorConstruction.cc  PhysicsList.cc
W_random_olimatorPrototype3_0.34_v3/analysis/: hitsselect_corect_region_counts2.txt
W_random_olimatorPrototype3_0.34_v3/analysis2/: hitsselect_corect_region_counts2.txt
W_random_olimatorPrototype3_0.34_v3/include/: ActionInitialization.hh  RunAction.hh
W_random_olimatorPrototype3_0.34_v3/src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc
tools/: cmapmakerAndPixelevtcounter2.py  compare_histgram4XorZ.py  histgram4XorZ.py
